master-file/src/main/resources/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: caj-master-file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caj-master-file
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: caj-master-file
        version: v1
    spec:
      containers:
        - name: caj-master-file
          image: 'docker.io/d0ck3rj3ff/caj-master-file:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
